--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
        "      dtype='|S11')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,6 +616,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_2010' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-47e057533932>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrowth_grades\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_2010\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m14\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#growth grade\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgrowth_trends\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_2010\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m21\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#growth trend (what's the difference?)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#get remediation data from file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_2010' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "growth_grades = data_2010[:,14] #growth grade\n",
+    "\n",
+    "growth_trends = data_2010[:,21] #growth trend (what's the difference?)\n",
+    "\n",
+    "#get remediation data from file\n",
+    "remediation_strings = np.loadtxt(\"./Data_2010.csv\", dtype='str', delimiter=\",\", usecols = [35])\n",
+    "remediation_data = np.zeros((num_records,1))\n",
+    "growth_trend_color_map = np.zeros((num_records, 3)) #np.zeros_like((num_records,1), dtype=[0, 0, 0])\n",
+    "\n",
+    "for i in range(num_records):\n",
+    "    if growth_trends[i] == 1:\n",
+    "        growth_trend_color_map[i][0] = 1\n",
+    "        growth_trend_color_map[i][1] = 1\n",
+    "        growth_trend_color_map[i][2] = 0\n",
+    "    elif growth_trends[i] == 2:\n",
+    "        growth_trend_color_map[i][0] = 1\n",
+    "        growth_trend_color_map[i][1] = 0\n",
+    "        growth_trend_color_map[i][2] = 0.8\n",
+    "    elif growth_trends[i] == 3: \n",
+    "        growth_trend_color_map[i][0] = 1\n",
+    "        growth_trend_color_map[i][1] = 0\n",
+    "        growth_trend_color_map[i][2] = 0.5\n",
+    "    else : # gray\n",
+    "        growth_trend_color_map[i][0] = 0.2\n",
+    "        growth_trend_color_map[i][1] = 0.2\n",
+    "        growth_trend_color_map[i][2] = 0.2\n",
+    "    if(remediation_strings[i] == \"NA\"):\n",
+    "        remediation_data[i] = 0;\n",
+    "    else:\n",
+    "        remediation_data[i] = float(remediation_strings[i]) * 100\n",
+    "\n",
+    "plt.figure(figsize=(7,7))\n",
+    "plt.axis([0,100,0,100])\n",
+    "X = data_2010[:,34] #percent free or reduced lunch\n",
+    "Y = remediation_data #percent needing remediation before graduation\n",
+    "plt.scatter(X,Y,alpha=0.5,c = growth_trend_color_map)\n",
+    "plt.title(\"Reduced Lunches and Remediation Rates\")\n",
+    "plt.xlabel(\"Percent Free or Reduced Lunch\")\n",
+    "plt.ylabel(\"Percent Remediation\")\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(7,7))\n",
+    "plt.axis([0,100,0,100])\n",
+    "X = data_2010[:,18] #graduation rate, percent\n",
+    "Y = remediation_data #percent needing remediation before graduation\n",
+    "\n",
+    "plt.scatter(X,Y, alpha = 0.5, c = growth_trend_color_map)\n",
+    "plt.title(\"Remediation and Graduation Rates\")\n",
+    "plt.xlabel(\"Percent Graduation\")\n",
+    "plt.ylabel(\"Percent Remediation\")\n",
+    "\n",
+    "\n",
+    "#not much correlation with the colors, but a cool exercise if we can find patterns with the colors"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -640,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
